--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@
 .buildlog/
 .history
 
-
+# Firebase
+android/app/google-services.json
+lib/firebase_options.dart
+firebase.json
 
 # Flutter repo-specific
 /bin/cache/
