--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_maps_flutter: ^2.12.3
   geolocator: ^14.0.1
   geocoding: ^4.0.0
+  firebase_core: ^3.14.0
+  cloud_firestore: ^5.6.9
 
 dev_dependencies:
   flutter_test:
